Add jSpecify to c2c.biz packages.