@@ -40,7 +40,7 @@ import static org.springframework.security.crypto.encrypt.Encryptors.noOpText;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -179,7 +179,7 @@ public class OpenWeatherMapWeatherCloudDatumStreamServiceTests {
 		given(datumStreamMappingDao.get(mapping.getId())).willReturn(mapping);
 
 		given(datumStreamPropertyDao.findAll(TEST_USER_ID, mapping.getConfigId(), null))
-				.willReturn(Collections.emptyList());
+				.willReturn(List.of());
 
 		// configure datum stream
 		final Long locationId = randomLong();
@@ -288,7 +288,7 @@ public class OpenWeatherMapWeatherCloudDatumStreamServiceTests {
 		given(datumStreamMappingDao.get(mapping.getId())).willReturn(mapping);
 
 		given(datumStreamPropertyDao.findAll(TEST_USER_ID, mapping.getConfigId(), null))
-				.willReturn(Collections.emptyList());
+				.willReturn(List.of());
 
 		// configure datum stream
 		final Long locationId = randomLong();
