@@ -115,11 +115,11 @@ public class JdbcCloudDatumStreamConfigurationDaoTests extends AbstractJUnit5Jdb
 	public void insert() {
 		// GIVEN
 		final CloudIntegrationConfiguration integration = createIntegration(userId,
-				singletonMap("bim", "bam"));
+				Map.of("bim", "bam"));
 		final CloudDatumStreamMappingConfiguration mapping = createDatumStreamMapping(userId,
 				integration.getConfigId(), Map.of("bif", "bop"));
 
-		Map<String, Object> props = singletonMap("foo", "bar");
+		Map<String, Object> props = Map.of("foo", "bar");
 		// @formatter:off
 		CloudDatumStreamConfiguration conf = newCloudDatumStreamConfiguration(userId,
 				mapping.getConfigId(),
@@ -209,7 +209,7 @@ public class JdbcCloudDatumStreamConfigurationDaoTests extends AbstractJUnit5Jdb
 		conf.setObjectId(randomLong());
 		conf.setSourceId(randomString());
 
-		Map<String, Object> props = Collections.singletonMap("bar", "foo");
+		Map<String, Object> props = Map.of("bar", "foo");
 		conf.setServiceProps(props);
 
 		UserLongCompositePK result = dao.save(conf);
@@ -249,13 +249,13 @@ public class JdbcCloudDatumStreamConfigurationDaoTests extends AbstractJUnit5Jdb
 		final List<Long> userIds = new ArrayList<>(userCount);
 		final List<CloudDatumStreamConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int u = 0; u < userCount; u++ ) {
 			Long userId = CommonDbTestUtils.insertUser(jdbcTemplate);
 			userIds.add(userId);
 			for ( int i = 0; i < integrationCount; i++ ) {
-				Long integrationId = createIntegration(userId, singletonMap("bim", "bam")).getConfigId();
+				Long integrationId = createIntegration(userId, Map.of("bim", "bam")).getConfigId();
 				for ( int m = 0; m < mappingCount; m++ ) {
 					Long mappingId = createDatumStreamMapping(userId, integrationId, null).getConfigId();
 					for ( int ds = 0; ds < count; ds++ ) {
@@ -299,13 +299,13 @@ public class JdbcCloudDatumStreamConfigurationDaoTests extends AbstractJUnit5Jdb
 		final List<Long> userIds = new ArrayList<>(userCount);
 		final List<CloudDatumStreamConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int u = 0; u < userCount; u++ ) {
 			Long userId = CommonDbTestUtils.insertUser(jdbcTemplate);
 			userIds.add(userId);
 			for ( int i = 0; i < integrationCount; i++ ) {
-				Long integrationId = createIntegration(userId, singletonMap("bim", "bam")).getConfigId();
+				Long integrationId = createIntegration(userId, Map.of("bim", "bam")).getConfigId();
 				for ( int m = 0; m < mappingCount; m++ ) {
 					Long mappingId = createDatumStreamMapping(userId, integrationId, null).getConfigId();
 					for ( int ds = 0; ds < count; ds++ ) {
@@ -351,12 +351,12 @@ public class JdbcCloudDatumStreamConfigurationDaoTests extends AbstractJUnit5Jdb
 		final int mappingCount = 3;
 		final List<CloudDatumStreamConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int u = 0; u < userCount; u++ ) {
 			Long userId = CommonDbTestUtils.insertUser(jdbcTemplate);
 			for ( int i = 0; i < integrationCount; i++ ) {
-				Long integrationId = createIntegration(userId, singletonMap("bim", "bam")).getConfigId();
+				Long integrationId = createIntegration(userId, Map.of("bim", "bam")).getConfigId();
 				for ( int m = 0; m < mappingCount; m++ ) {
 					Long mappingId = createDatumStreamMapping(userId, integrationId, null).getConfigId();
 					for ( int ds = 0; ds < count; ds++ ) {
@@ -406,12 +406,12 @@ public class JdbcCloudDatumStreamConfigurationDaoTests extends AbstractJUnit5Jdb
 		final int mappingCount = 3;
 		final List<CloudDatumStreamConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int u = 0; u < userCount; u++ ) {
 			Long userId = CommonDbTestUtils.insertUser(jdbcTemplate);
 			for ( int i = 0; i < integrationCount; i++ ) {
-				Long integrationId = createIntegration(userId, singletonMap("bim", "bam")).getConfigId();
+				Long integrationId = createIntegration(userId, Map.of("bim", "bam")).getConfigId();
 				for ( int m = 0; m < mappingCount; m++ ) {
 					Long mappingId = createDatumStreamMapping(userId, integrationId, null).getConfigId();
 					for ( int ds = 0; ds < count; ds++ ) {
